# Autonomous-Browser-Agent

./: .env.example  .gitignore  Agent_Capabilities_Report.md  Autonomous_Browser_Agent_Report.docx  README.md  generate_report.py  main.py  pyproject.toml  requirements.txt  uml_diagrams.html
frontend/: ideas.md  package.json
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: ConnectionIndicator.tsx  Layout.tsx  Sidebar.tsx
frontend/client/src/pages/: Dashboard.tsx  LiveMonitor.tsx  Settings.tsx  TaskHistory.tsx
rag_data/: chroma.sqlite3
src/browser_agent/: __init__.py  orchestration.py
src/browser_agent/agents/: __init__.py  base.py  executor.py  formatter.py  planner.py  rag.py  redirector.py  validator.py
src/browser_agent/api/: __init__.py  app.py  models.py  task_manager.py  websocket.py
src/browser_agent/api/routes/: __init__.py  agent.py  health.py  logs.py
src/browser_agent/browser/: manager.py
src/browser_agent/browser/analysis/: __init__.py  helpers.py  scraping.py  screenshot_observer.py  vision.py  (+1 more)
src/browser_agent/core/: __init__.py  exceptions.py  schemas.py  state.py  utils.py
src/browser_agent/llm/: __init__.py  base.py  rate_limiter.py  router.py
src/browser_agent/memory/: __init__.py  base.py  cache.py  session_store.py  vector_store.py
src/browser_agent/observability/: __init__.py  logger.py  metric.py  tracer.py
src/browser_agent/prompts/: __init__.py  analysis.py  execution.py  planning.py
src/browser_agent/ui/: app.py  streamlit_app.py
tests/: test_imports.py
(+12 files in other folders)
