[project]
name = "autonomous-browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.13",
    "beautifulsoup4==4.13.4",
    "chromadb==1.3.5",
    "httpx==0.28.1",
    "ir>=0.0.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-core==0.3.68",
    "langchain-google-genai==2.1.5",
    "langchain-groq==0.3.4",
    "langchain-huggingface==0.3.0",
    "langchain-sambanova==1.0.0",
    "langgraph==0.5.0",
    "nest-asyncio==1.6.0",
    "playwright==1.53.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.0",
    "sentence-transformers==5.1.2",
    "streamlit==1.52.1",
]
